[package]
name = "pms7003"
description = "Prometheus exporter for the PMS7003 particle sensor"
version = "0.1.0"
edition = "2018"

[dependencies]
serialport = { version = "4.0.1", default-features = false }
structopt = "0.3.25"
log = "0.4"
env_logger = "0.9"
nom = "7.1.0"
prometheus_exporter = "0.8.3"
lazy_static = "1.4.0"
aqi = "0.2"
